<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Editar_Ordem_Servico_Activity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnOrdemServicoVoltarId"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_dark"
        android:text="@string/btn_cancelar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <Button
        android:id="@+id/btnOrdemServicoAlterarId"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_dark"
        android:text="@string/btn_confirmar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOrdemServicoVoltarId"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="448dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNumeroMarcaModeloId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="84dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="@string/txt_valor_final"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView43" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="@string/txt_valor_previo"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView42" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:text="Cliente"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:text="Status do Celular"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumeroMarcaModeloId" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="@string/txt_modelo_produto"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:text="@string/txt_marca_produto"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:text="@string/txt_data_entrada"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView34" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="@string/txt_IMEI"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:text="@string/txt_acessorios"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView37" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:text="Detalhes"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView38" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:padding="5dp"
                android:text="Defeito"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDetalhesId" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="Tecnico Responsavel"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDefeitoId" />

            <Spinner
                android:id="@+id/spinnerStatusId"
                android:layout_width="208dp"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumeroMarcaModeloId" />

            <TextView
                android:id="@+id/txtModeloId"
                android:layout_width="209dp"
                android:layout_height="28dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtClienteId" />

            <TextView
                android:id="@+id/txtClienteId"
                android:layout_width="209dp"
                android:layout_height="27dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtValorPrevioId" />

            <TextView
                android:id="@+id/txtMarcaId"
                android:layout_width="209dp"
                android:layout_height="28dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtModeloId" />

            <TextView
                android:id="@+id/txtDataEntradaId"
                android:layout_width="209dp"
                android:layout_height="28dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMarcaId" />

            <TextView
                android:id="@+id/txtImeiId"
                android:layout_width="209dp"
                android:layout_height="28dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDataEntradaId" />

            <TextView
                android:id="@+id/txtAcessoriosId"
                android:layout_width="209dp"
                android:layout_height="28dp"
                android:layout_margin="7dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtImeiId" />

            <EditText
                android:id="@+id/txtValorFinalId"
                android:layout_width="209dp"
                android:layout_height="28dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="92dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:visibility="invisible"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerStatusId" />

            <TextView
                android:id="@+id/txtValorPrevioId"
                android:layout_width="209dp"
                android:layout_height="28dp"
                android:layout_margin="7dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtValorFinalId" />

            <TextView
                android:id="@+id/txtDefeitoId"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDetalhesId" />

            <TextView
                android:id="@+id/txtTecnicoResponsavelId"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDefeitoId" />

            <TextView
                android:id="@+id/txtDetalhesId"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAcessoriosId" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
